@@ -7,6 +7,7 @@ SRCFILES
 TARGETS
 compile
 conf_bin.c
+conf_qmail.c
 installer
 instcheck
 insthier.o
